--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@styled-icons/fa-brands": "^10.38.0",
+    "@styled-icons/fa-regular": "^10.34.0",
+    "@svg-icons/fa-brands": "^1.86.0",
     "@types/styled-components": "^5.1.24",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
